# mcp-bitbucket

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
bitbucket_mcp/: __init__.py  __main__.py  client.py  errors.py  server.py
docs/plans/: 2026-02-24-bitbucket-mcp-design.md  2026-02-24-bitbucket-mcp-implementation.md
docs/research/: 001-brainstorm-feedback-tool.md
tests/: test_client.py  test_client_comments_server.py  test_errors.py  test_feedback.py
