[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitbucket-mcp"
version = "0.1.0"
description = "MCP server for Bitbucket Cloud REST API 2.0 — manage pull requests, comments, reviews, pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Alexandr Marmuzevich" },
]
keywords = ["mcp", "bitbucket", "claude", "model-context-protocol", "pull-request", "code-review"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "mcp>=1.20.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.5",
]

[project.urls]
Homepage = "https://github.com/mst72/mcp-bitbucket"
Repository = "https://github.com/mst72/mcp-bitbucket"
Issues = "https://github.com/mst72/mcp-bitbucket/issues"

[project.scripts]
bitbucket-mcp = "bitbucket_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "responses>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bitbucket_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
